--- a/gpioTest/Makefile
+++ b/gpioTest/Makefile
@@ -16,10 +16,10 @@ EXENAME = gpioTest
 BIN = ./$(EXENAME)
 
 CPPFLAGS= -g -Wall -O0
-CPPFLAGS  +=  "-msse" -march=core2  -fomit-frame-pointer 
+CPPFLAGS  +=   -fomit-frame-pointer 
 CPPFLAGS  +=  -Wall -Wundef -Wpointer-arith -fPIC
 
-LIBS = -lpthread -lrt  -lm -lwiringPi
+LIBS = -lpthread -lrt  -lm -lpigpio
 LIBPATH = \
           -L ./ \
  
